[package]
name = "scroll_strategist"
version = "0.0.3"
authors = ["deer <capreolina@protonmail.ch>"]
edition = "2018"
description = "An algorithm for choosing scrolling strategies"
repository = "https://codeberg.org/deer/scroll_strategist"
readme = "README.md"
keywords = ["maplestory", "scroll", "strategy", "dynamic-programming", "graph"]
categories = ["games", "algorithms"]
license = "AGPL-3.0-or-later"

[dependencies]
rustc-hash = "1.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false
overflow-checks = false
